changed to venv directory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,15 @@
 {
     "sqltools.connections": [
-        {
+       
+      {
             "ssh": "Disabled",
             "previewLimit": 50,
             "server": "localhost",
             "port": 5432,
             "driver": "PostgreSQL",
-            "name": "PG Local",
+            "name": "127.0.0.1",
             "database": "covid",
-            "username": "postgres",
-            "password": "Lazio1900",
-            "connectionTimeout": 30
+            "username": "vella87"
         }
     ]
 }
